managed the buttons in _base.html

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -21,8 +21,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                <a class="nav-link" href="#">Blog</a>
+                <a class="nav-link active" aria-current="page" href="{% url 'list_view' %}">Home</a>
+                <a class="nav-link" href="{% url 'list_view' %}">Blog</a>
+                <a href="{% url 'post_create' %}">Create</a>
+
             </div>
         </div>
         <div class="mx-2 text-white">Welcome</div>
