colored the create button

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -23,7 +23,7 @@
             <div class="navbar-nav">
                 <a class="nav-link active" aria-current="page" href="{% url 'list_view' %}">Home</a>
                 <a class="nav-link" href="{% url 'list_view' %}">Blog</a>
-                <a href="{% url 'post_create' %}">Create</a>
+                <a class="nav-link" href="{% url 'post_create' %}" >Create</a>
 
             </div>
         </div>
