created a sign_up view template and a view for it

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -31,7 +31,7 @@
             {% if user.is_authenticated %}
                 Welcome {{ user.username }} | <a class="text-light" href="{% url 'logout' %}">Log Out</a>
             {% else %}
-                <a href="{% url 'login' %}">login</a> | <a href="{% url 'Sign up' %}">login</a>
+                <a href="{% url 'login' %}">login</a> | <a class="text-light" href="{% url 'logout' %}">Log Out</a>
         {% endif %} </div>
     </div>
 </nav>
